# practice7

serde_practice/: Cargo.toml  request.json
serde_practice/src/: main.rs
